Revert "fixed: extra space in sender input box trimed,campaign button disable…"

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,10 +4,6 @@
   font-family: 'Nunito Sans', sans-serif;
 }
 
-body {
-  margin: 0px;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
